# cardTrumpChecker

./: .travis.yml  README.md  TestCardTrumpChecker.py  cardTrumpChecker.py  pyproject.toml
tests/: test_cardTrumpChecker.py
